# MultiLink

./: .gitignore  CLAUDE.md  build-mac.sh  package-lock.json  package.json  plan.md
.claude/: settings.json  settings.local.json
.github/workflows/: build.yml
.trae/documents/: fix_caps_lock_plan.md
app/: README.md  REVENUECAT_SETUP.md  capacitor.config.ts  convert.ts  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
app/.trae/documents/: mdns-discovery-troubleshooting.md
app/android/: build.gradle  capacitor.settings.gradle
app/android/app/: build.gradle  capacitor.build.gradle
app/ios/: debug.xcconfig
app/ios/App/: Podfile
app/src/: App.tsx  constants.ts  i18n.ts  index.css  types.ts
app/src/assets/: audioData.ts
app/src/components/: FlipCounter.tsx  Keyboard.tsx  Modal.tsx  QrScanner.tsx  Touchpad.tsx  WifiIndicator.tsx
app/src/pages/: AddDevicePage.tsx  QrScannerPage.tsx
link/: README.md  build-mac.sh  build.rs  convert-icon.js  package-lock.json  package.json
link/.claude/: settings.local.json
link/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
link/src-tauri/icons/: README.md  create_icon.rs  icon.icns
link/src-tauri/src/: auto_start.rs  buffer.rs  driver.rs  hid.rs  i18n.rs  main.rs  mdns.rs  network.rs  port.rs  qr.rs  scancode.rs  tray.rs
link/ui/: app.js  index.html  style.css
link/wix/: BUILD.md  README.md  build.bat  license.rtf  main.wxs
production/: index.html  tutorial.md  tutorial2.md
production/help/: README.md  index.html  metadata.json  package-lock.json
(+48 files in other folders)
