[package]
name = "MultiLinkServer"
version = "0.1.0"
description = "MultiLinkServer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
open = "5"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
once_cell = "1.19"
mdns-sd = "0.11"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2tcpip", "winuser", "basetsd", "minwindef", "windef"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
foreign-types = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
